# Tetris_Royal-ba2_year_project

./: CMakeLists.txt  config.json  install.sh  readme.md
db-files/: main.db
include/client/: ClientGUI.hpp  ClientTUI.hpp
include/client/connectivity/: ClientSession.hpp  Config.hpp  DBRequestManager.hpp  GameRequestManager.hpp
include/client/gui/GameMenus/: GameRenderGUI.hpp  GameScreenGUI.hpp
include/client/gui/LobbyMenus/: ButtonWidget.hpp  LabelWidget.hpp  ListWidget.hpp  LobbyGUI.hpp  MenuSwitcher.hpp  WaitingLobbyGUI.hpp
include/client/gui/LoginMenus/: LoginScreenGUI.hpp  RegisterScreenGUI.hpp
include/client/gui/MainMenus/: FriendWidget.hpp  FriendsListManager.hpp  FriendsListWidget.hpp  LeaderScreenGUI.hpp  MainMenuGUI.hpp  ModeSelectionGUI.hpp  SettingsMenuGUI.hpp
include/client/tui/: MenuHandlerTUI.hpp
include/client/tui/menus/: GameScreenTUI.hpp  InLobbyScreenTUI.hpp  LobbyBrowserTUI.hpp  LoginScreenTUI.hpp  MainMenuTUI.hpp  RegisterScreenTUI.hpp
include/common/: Common.hpp  Types.hpp
include/common/server-common/: DBCommon.hpp  GameState.hpp  KeyStroke.hpp  LobbyState.hpp  ServerRequest.hpp  ServerResponse.hpp
include/server/: MasterServer.hpp
include/server/db-server/: DBServer.hpp
include/server/http-server/: HTTPServer.hpp
include/server/server-game-logic/: Bag.hpp  ClassicEngine.hpp  ClassicGame.hpp  GameEngine.hpp  GameMatrix.hpp  RoyalEngine.hpp  RoyalGame.hpp  TetrisFactory.hpp  TetrisGame.hpp  Tetromino.hpp
include/server/tetris-server/: Game.hpp  GameCreator.hpp  GameServer.hpp  Lobby.hpp  LobbyServer.hpp  TetrisServer.hpp
scripts/: .clang-format  find_dependencies.sh  format.sh  get_nproc.sh
src/client/: ClientGUI.cpp  ClientTUI.cpp
src/client/connectivity/: ClientSession.cpp  Config.cpp  DBRequestManager.cpp  GameRequestManager.cpp
src/client/gui/GameMenus/: GameRenderGUI.cpp  GameScreenGUI.cpp
src/client/gui/LobbyMenus/: LobbyGUI.cpp  WaitingLobbyGUI.cpp  menuSwitcher.cpp
src/client/gui/LoginMenus/: LoginScreenGUI.cpp  RegisterScreenGUI.cpp
src/client/gui/MainMenus/: FriendsListWidget.cpp  LeaderScreenGUI.cpp  MainMenuGUI.cpp  ModeSelectionGUI.cpp  SettingsMenuGUI.cpp  friendWidget.cpp
src/client/tui/: MenuHandlerTUI.cpp
src/client/tui/menus/: GameScreenTUI.cpp  InLobbyScreenTUI.cpp  LobbyBrowserTUI.cpp  LoginScreenTUI.cpp  MainMenuTUI.cpp  RegisterScreenTUI.cpp
src/common/: Common.cpp  Types.cpp
src/common/server-common/: DBCommon.cpp  GameState.cpp  KeyStroke.cpp  LobbyState.cpp  ServerRequest.cpp  ServerResponse.cpp
src/server/: MasterServer.cpp
src/server/db-server/: DBServer.cpp
src/server/http-server/: HTTPServer.cpp
src/server/server-game-logic/: Bag.cpp  ClassicEngine.cpp  ClassicGame.cpp  GameEngine.cpp  GameMatrix.cpp  RoyalEngine.cpp  RoyalGame.cpp  TetrisFactory.cpp  TetrisGame.cpp  Tetromino.cpp
src/server/tetris-server/: Game.cpp  GameCreator.cpp  GameServer.cpp  Lobby.cpp  LobbyServer.cpp  TetrisServer.cpp
test/: BagTest.cpp  GameMatrixTest.cpp  TetrisFactoryTest.cpp  TetrominoTest.cpp
